--- a/00-HTML-CSS-basics/stylehome.css
+++ b/00-HTML-CSS-basics/stylehome.css
@@ -79,12 +79,27 @@ body{
 	overflow: hidden;
 }
 /* Estilo y grid de las imagenes*/
-/*
+
 @media screen and (max-width: 480px){
-    .container .div {
-        grid-column: 1 / 3;
+    * {
+		max-width: 480px;
+		
     }
-}*/
+	.navigation {
+		width: 40%;
+		margin-right: 20px;
+	}
+	.column2{
+		width: 40%;
+		margin-top: 50px;
+		left: -162px;		
+	}
+	.column3{
+		width: 40%;
+		margin-left: 10px;
+		float: left;
+	}
+}
 .container{
 	width: 90%;
 	max-width: 1000px;
@@ -120,8 +135,8 @@ img{
 	left: 0;
 	top: 0;
 	border-radius: 0;
-	height: 100%;
-	width: 100%;
+	height: 200px;
+	width: 300px;
 	position: absolute;
 	opacity: 0;
 	z-index: 1000;
