--- a/00-HTML-CSS-basics/stylehome.css
+++ b/00-HTML-CSS-basics/stylehome.css
@@ -56,7 +56,7 @@ body{
 	float: right;
 	display: block;
 	left: 10px;
-	width: 60%;
+	width: 30%;
 	min-height: 2em;
 	margin-right: 60px;
 	margin-top: 20px;
@@ -80,26 +80,8 @@ body{
 }
 /* Estilo y grid de las imagenes*/
 
-@media screen and (max-width: 480px){
-    * {
-		max-width: 480px;
-		
-    }
-	.navigation {
-		width: 40%;
-		margin-right: 20px;
-	}
-	.column2{
-		width: 40%;
-		margin-top: 50px;
-		left: -162px;		
-	}
-	.column3{
-		width: 40%;
-		margin-left: 10px;
-		float: left;
-	}
-}
+
+
 .container{
 	width: 90%;
 	max-width: 1000px;
@@ -160,3 +142,29 @@ img{
 	font-size: 2em;
 	padding: 5%;
   }
+
+  @media screen and (max-width: 480px){
+    * {
+		max-width: 480px;
+		
+    }
+	.navigation {
+		width: 40%;
+		margin-right: 20px;
+	}
+	.column2{
+		width: 40%;
+		margin-top: 50px;
+		left: -162px;		
+	}
+	.column3{
+		width: 40%;
+		margin-left: 10px;
+		float: left;
+	}
+	.container{
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(3, auto);
+
+	}
+}
